Fixes: NB#284004, Vietnamese VKB is shown as truncated in landscape mode & some keys are missing in portrait mode.
RevBy: Jan Arne Petersen
Details: Do not use "keys45" style mode for vietnamese keyboard, use style
         mode "vietnamese" instead.

--- a/m-keyboard/theme/libmeego-keyboard.css
+++ b/m-keyboard/theme/libmeego-keyboard.css
@@ -544,6 +544,13 @@ MImAbstractKeyAreaStyle.Portrait:hebrew {
     padding-right: 6px;
 }
 
+
+MImAbstractKeyAreaStyle.Landscape:vietnamese {
+}
+
+MImAbstractKeyAreaStyle.Portrait:vietnamese {
+}
+
 KeyboardShadowStyle {
     background-image: "meegotouch-keyboard-border-top";
     margin-top: 0;
